<resources>
    <string name="app_name">BookMyMovie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">Kabil movie poster</string>
    <string name="action_settings">Settings</string>
    <string name="read_more">Read More…</string>
    <string name="movie_name">MOVIE NAME</string>
    <string name="release_date">RELEASE DATE</string>
    <string name="language">LANGUAGE</string>
    <string name="run_time">RUN TIME</string>
    <string name="genre">GENRE</string>
    <string name="synopsis">SYNOPSIS</string>
    <string name="reviews">REVIEWS</string>
    <string name="colon">:</string>
    <string name="ten_ten">10/10</string>
    <string name="play">play video</string>
</resources>
